# Computer_Achitechure

./: .gitattributes
Cache_simulator/Project1_CPP/: verify.out  verify.py
Cache_simulator/Project1_CPP/config/: basic.conf  basic_fifo.conf  basic_lfu.conf  big_basic.conf  big_default.conf  default.conf  direct_mapped.conf  ex2.conf  fifo.conf  fully_assoc.conf  lfu.conf
Cache_simulator/Project1_CPP/src/: cache.cpp  cache.hpp  cachesim_driver.cpp
Tamasulo's/Project3/: CMakeLists.txt  Makefile  README  gcc_detailed_trace.txt  procsim  procsim.cpp  procsim.h  procsim_driver.cpp  verify.out
Tamasulo's/Project3/traces/: bwaves603_2M.trace  gcc602_2M.trace  mcf605_2M.trace  perlbench600_2M.trace
branch_predictor/: CMakeLists.txt  Experiment Project 2.docx  verify.py
branch_predictor/src/: branchsim.cpp  branchsim.h  branchsim_driver.cpp  gshare.h  perceptron.h  yeh_patt.h
branch_predictor/traces/: gcc.br.trace  mcf.br.trace  perlbench.br.trace  x264.br.trace
